--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -100,3 +100,16 @@ p {
     border-right: 0;
     border-radius: 0 3px 3px 0;
 }
+
+/* dropdown menu */
+
+.navbar .nav li .dropdown-menu li {
+  display: block;
+  width: auto;
+}
+
+.dropdown-menu {
+  left:auto;
+}
+
+
