--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,20 +4,19 @@
       <nav>
         <ul class="nav pull-left">
           <!-- li><%= link_to(image_tag("vndr_logo.png",:size => "50x50",:alt=> "logo",:title => "Home"), "/", class: "brand")%></li -->
-          <li><%= link_to "Home", "#" %></li>
-          <li><%= link_to "Parents", "#" %></li>
-          <li><%= link_to "Students", "#" %></li>
+          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Parents", parents_path %></li>
+          <li><%= link_to "Students", students_path %></li>
           <li id="fat-menu" class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Tutors <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "Sign Up", "#" %></li>
-              <li class="divider"></li>
             </ul>
           </li>
-          <li><%= link_to "Sign Up", "#" %></li>
-          <li><%= link_to "Log In", "#" %></li>
+          <%= render 'layouts/registration_items' %>
+          <%= render 'layouts/login_items' %>
         </ul>
       </nav>
     </div
