--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
               Tutors <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Sign Up", "#" %></li>
+              <li><%= link_to "Sign up", "#" %></li>
             </ul>
           </li>
           <%= render 'layouts/registration_items' %>
