--- a/app/views/layouts/_login_items.html.erb
+++ b/app/views/layouts/_login_items.html.erb
@@ -1,5 +1,5 @@
 <% if !user_signed_in? %>
   <li>
-  <%= link_to('Sign In', new_user_session_path)  %>  
+  <%= link_to('Sign in', new_user_session_path)  %>  
   </li>
 <% end %>
