--- a/app/views/layouts/_registration_items.html.erb
+++ b/app/views/layouts/_registration_items.html.erb
@@ -7,10 +7,10 @@
       <li><%= link_to "Edit Account", edit_user_registration_path %></li>
       <li class="divider"></li>
       <li>
-        <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
+        <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
       </li>
     </ul>
   </li>
 <% else %>
-  <li><%= link_to "Sign Up", new_user_registration_path %></li>
+  <li><%= link_to "Sign up", new_user_registration_path %></li>
 <% end %>
