--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,6 @@
-<% provide(:title, 'Home') %>
 <h1>SMAAT</h1>
-<p>
-    Students of Mansfield Alumni Assistance and Tuition
-</p>
+<h2>Students of Mansfield Alumni Assistance and Tuition</h2>
+<%= render '/layouts/carousel' %>
+<h3>Tutoring for <i>present</i> students by <i>past</i> students.</h3>
+<h2>D BLOCK</h2>
+<h2>3:10PM - 4:30PM</h2>
