--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
-<header class="navbar navbar-default navbar-fixed-top">
+<header class="navbar navbar-default navbar-static-top">
   <div class="navbar-inner">
     <div class="container">
       <nav>
-        <ul class="nav pull-left">
+        <ul class="nav navbar-nav">
           <!-- li><%= link_to(image_tag("vndr_logo.png",:size => "50x50",:alt=> "logo",:title => "Home"), "/", class: "brand")%></li -->
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Parents", parents_path %></li>
@@ -15,10 +15,12 @@
               <li><%= link_to "Sign up", "#" %></li>
             </ul>
           </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
           <%= render 'layouts/registration_items' %>
           <%= render 'layouts/login_items' %>
         </ul>
       </nav>
-    </div
+    </div>
   </div>
 </header>
