--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,20 +5,21 @@
         <ul class="nav navbar-nav">
           <!-- li><%= link_to(image_tag("vndr_logo.png",:size => "50x50",:alt=> "logo",:title => "Home"), "/", class: "brand")%></li -->
           <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "Parents", parents_path %></li>
-          <li><%= link_to "Students", students_path %></li>
+          <li><%= link_to "Information", info_path %></li>
+          <li><%= link_to "Why SMAAT?", why_smaat_path %></li>
           <li id="fat-menu" class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Tutors <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "Sign up", "#" %></li>
+              <li><%= link_to "Login", "#" %></li>
             </ul>
           </li>
+          <li><%= link_to "Calendar", "#" %></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <%= render 'layouts/registration_items' %>
-          <%= render 'layouts/login_items' %>
         </ul>
       </nav>
     </div>
