--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,6 +16,8 @@ $navbarLinkColorHover: #FFFFFF;
 
 /* universal */
 
+input, label{ display: inline; }
+
 html {
   overflow-y: scroll;
 }
@@ -47,7 +49,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 6em;
+  font-size: 4em;
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
@@ -77,6 +79,13 @@ h5 {
   letter-spacing: -1px;
   margin-bottom: 20px;
   font-weight: bold;
+}
+
+h6 {
+  font-size: 6em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 p {
