--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -26,7 +26,10 @@
 </div>
 
 <hr class="featurette-divider">
-	<div><%= link_to "NEW STUDENTS SIGN UP HERE", class: "btn btn-large btn-primary"%></div>
-	<div><%= link_to "NEW TUTORS APPLY HERE", class: "btn btn-large btn-primary"%></div>
+<div class="featurette">
+  <div>
+    <div><%= link_to "NEW STUDENTS SIGN UP HERE", new_user_registration_path, class: "btn btn-large btn-primary"%></div>
+    <div><%= link_to "NEW TUTORS APPLY HERE", "#", class: "btn btn-large btn-primary"%></div>
+  </div>
 </div>
 
