--- a/app/views/layouts/_subject_fields.html.erb
+++ b/app/views/layouts/_subject_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="fields">
 	<%= f.label :name, "Subject" %><br />
-	<%= link_to_remove_fields "remove", f %><br />
+	<%= f.link_to_remove "remove"%><br />
 	<%= f.text_field :name %>
 	<%= f.label :description, "What are some specific areas in this subject that you would like to focus on? (Topics, techniques etc)" %>
 	<%= f.text_area :description, :rows => 3%><br />
