--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <h1>Sign up</h1>
 <div class="row">
 	<div class="span6 offset3">
-		<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+		<%= nested_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
   		<div><%= f.label :first_name, "Student's First Name" %>
@@ -30,7 +30,7 @@
           <%= render 'layouts/subject_fields', :f => builder %>
         <% end %>
       </div>
-      <p><%= link_to_add_fields "Add Subject", f, :subjects %></p>
+      <p><%= f.link_to_add "Add Subject", :subjects %></p>
 
   		<div><%= f.label :parent_name, "Parent's Name"%>
   		<%= f.text_field :parent_name %><br /></div>
