--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,18 +1,17 @@
 <%= render '/layouts/jumbotron' %>
-<h3>Tutoring for <i><b>present</b></i> students by <b><i>past</i></b> students.</h3>
 
 <hr class="featurette-divider">
 
 <div class="featurette">
-  <img class="featurette-image pull-right" src="../assets/img/examples/browser-icon-chrome.png">
+  <%= image_tag("achieve.png", size: "600x600", class: "featurette-image pull-right") %>
   <h2 class="featurette-heading">Achieve. <span class="muted">Brighten your path.</span></h2>
   <p class="lead">SMAAT is a program that endeavours to aid your student to <b>ACHIEVE ACADEMICALLY</b>. This program offers students of Mansfield State High School the opportunity to be mentoured by past students. Our tutors are passionate about seeing your student reach their potential. SMAAT is a program with a difference, offering low cost tutoring where PRESENT students are tutored by PAST students.</p>
 </div>
 
 <hr class="featurette-divider">
 
-<div class="featurette">
-  <img class="featurette-image pull-left" src="../assets/img/examples/browser-icon-firefox.png">
+<div class="featurette">  
+  <%= image_tag("be_equipped.png", size: "600x600", class: "featurette-image pull-right") %>
   <h2 class="featurette-heading">Be Equipped. <span class="muted">Be prepared.</span></h2>
   <p class="lead">SMAAT strives to <b>EQUIP STUDENTS</b> with learning strategies and techniques that can be manipulated and utilised in preparation for exams and assignments. Our tutors have completed the assessment and conquered the exams and are making available to students, the opportunity to learn how to study effectively, prepare practically and view information with relevance. SMAAT integrates and utilises learning strategies at the core of each session and works with your student to be prepared for the classroom, the exam and beyond.</p>
 </div>
@@ -20,16 +19,15 @@
 <hr class="featurette-divider">
 
 <div class="featurette">
-  <img class="featurette-image pull-right" src="../assets/img/examples/browser-icon-safari.png">
+  <%= image_tag("have_fun.png", size: "600x600", class: "featurette-image pull-right") %>
   <h2 class="featurette-heading">HAVE FUN!</h2>
   <p class="lead">The 9 - 3 grind of home, school and homework can become monotonous for many students, SMAAT aims to motivate and encourage students to view learning as an enjoyable experience. Sessions are conducted by driven tutors to create a safe, energetic and interactive environment. Learning something new can be enjoyable and enlightening experience. <b>AT SMAAT LEARNING CAN BE FUN!</b></p>
 </div>
-
 <hr class="featurette-divider">
-<div class="featurette">
-  <div>
-    <div><%= link_to "NEW STUDENTS SIGN UP HERE", new_user_registration_path, class: "btn btn-large btn-primary"%></div>
-    <div><%= link_to "NEW TUTORS APPLY HERE", "#", class: "btn btn-large btn-primary"%></div>
-  </div>
-</div>
+<p>
+  <div><%= link_to "NEW STUDENTS SIGN UP HERE", new_user_registration_path, class: "btn btn-large btn-primary pull-left"%></div>
+  <div><%= link_to "NEW TUTORS APPLY HERE", "#", class: "btn btn-large btn-primary pull-right"%></div>
+</p>
+
+
 
