--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -189,8 +189,20 @@ input {
   letter-spacing: -1px;
 }
 
+/* Extra large button extensions. Extends `.btn`. */
+.btn-xlarge {
+  padding: 15px 20px;
+  font-size: 22px;
+  line-height: normal;
+  -webkit-border-radius: 8px;
+     -moz-border-radius: 8px;
+          border-radius: 8px;
+}
 
-
+/* Centers "Get started today!" button on jumbotron */
+.centered {
+  text-align:center;
+}
 
 
 
