Changed to Parent/Guardian in view.

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -32,13 +32,13 @@
       </div>
       <p><%= f.link_to_add "Add Subject", :subjects %></p>
 
-  		<div><%= f.label :parent_name, "Parent's Name"%>
+  		<div><%= f.label :parent_name, "Parent or Guardian's Name"%>
   		<%= f.text_field :parent_name %><br /></div>
 
-		  <div><%= f.label :email, "Parent's Email" %>
+		  <div><%= f.label :email, "Parent or Guardian's Email" %>
 		  <%= f.email_field :email%><br /></div>
 
-		  <div><%= f.label :contact, "Parent's Contact Phone Number"%>
+		  <div><%= f.label :contact, "Parent or Guardian's Contact Phone Number"%>
   		<%= f.text_field :contact%><br /></div>
 
 		  <div><%= f.label :password %>
