Changed to Parent/Guardian in view.

--- a/app/views/layouts/_jumbotron.html.erb
+++ b/app/views/layouts/_jumbotron.html.erb
@@ -2,7 +2,7 @@
 <div class="jumbotron">
   <h6>SMAAT</h6>
   <h3>Tutoring for <i><b>present</b></i> students by <b><i>past</i></b> students.</h3>
-  <p class="lead">SMAAT (Student of Mansfield Alumni Assisstance and Tuition is an assistance and tuition program in which students can seek academic aid as well as insight into completing assessment and exam preparation. We im to provide affordable, high quality tutors to the students of Mansfield State High School. </p>
+  <p class="lead">SMAAT (Student of Mansfield Alumni Assisstance and Tuition) is an assistance and tuition program in which students can seek academic aid as well as insight into completing assessment and exam preparation. We aim to provide affordable, high quality tutors to the students of Mansfield State High School. </p>
   <div class="centered">
   	<p><%= link_to "Get started today!", new_user_registration_path, class: "btn btn-xlarge btn-success" %></p>
 	</div>
