Changed confirmation email view.

--- a/app/views/static_pages/info.html.erb
+++ b/app/views/static_pages/info.html.erb
@@ -6,10 +6,10 @@
 <h2>WHERE</h2>
 <h3>D BLOCK</h3>
 <h2>COST</h2>
-<h3>$25 per session</h3>
-<h3>Payment is made for ALL sessions of the remaining term in either INSTALLMENTS or IN FULL </h3>
-<h2>PAYMENT<h2>
-<h3>An invoice will be sent to the parent's email address. All payment is made to the lower office.</h3>
+<h3>$20 per session</h3>
+<h3>Payment should be made in MONTHLY installments OR in FULL for the remaining weeks in the term. Payments are made at the lower office.</h3><br />
+<h3>If students are unable to attend sessions at least 24 hours’ notice should be given to the SMAAT Coordinator. If no notice is given, the tutors still receive payment for their services despite the student’s absence.</h3>
+<h3>A payment form will be sent to the parent's email address upon registration.</h3>
 
 
 
