--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,39 @@
-<p>Welcome <%= @email %>!</p>
+<p>Dear <%= @parent_name %>,</p>
+
+Thank you for enrolling in the SMAAT program. 
 
 <p>You can confirm your account email through the link below:</p>
 
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @token) %></p>
+
+<p>Upon confirmation, further information will be emailed to you with regard to payment, a brief outline of the responsibility and role of the tutor will have and the expectations of your child so that time in these sessions will be used effectively and productively.</p>
+
+<p>Please be advised that sessions should be paid before students attend. Sessions should be either paid in monthly instalments or in full for an entire term.</p>
+
+<p>The tutors look forward to aiding your student any way we can.</p>
+
+<p>Please do not hesitate to consult <a href="www.smaat.com.au">www.smaat.com.au</a> for further information or contact me at <a href "smaatenquiries@outlook.com">smaatenquiries@outlook.com</a> if there are any problems.</p>
+
+<p>Kind regards</p>
+
+<p>Nelson Hsieh</p>
+<p>SMAAT Coordinator</p>
+<p>Students of Mansfield Alumni Assistance and Tuition</p>
+
+<p>Mansfield State High School</p>
+<p>PO Box 229</p>
+<p>Mt Gravatt Q 4122</p>
+<p>Ph    3452 5333</p>
+<p>FAX   3452 5300</p>
+<p>Email   <a href "smaatenquiries@outlook.com">smaatenquiries@outlook.com</a></p>
+<p>Website <a href="www.smaat.com.au">www.smaat.com.au</a></p>
+
+<p>SCHOOL LIAISONS</p>
+<p>Ms S Moye</p>
+<p>HOD (Teaching and Learning)</p>
+<p>Email    smoye1@eq.edu.au</p>
+
+<p>Ms B Clarke</p>
+<p>Deputy Principal</p>
+<p>Email  bclar11@eq.edu.au</p>
+
