Changing email view.

--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -16,16 +16,22 @@ Thank you for enrolling in the SMAAT program.
 
 <p>Kind regards</p>
 
-<p>Nelson Hsieh</p>
-<p>SMAAT Coordinator</p>
-<p>Students of Mansfield Alumni Assistance and Tuition</p>
+<div>
+	<p>
+		<ul>
+			<li>Nelson Hsieh</li>
+			<li>SMAAT Coordinator</li>
+			<li>Students of Mansfield Alumni Assistance and Tuition</li>
+			<ul>
+	</p>
+</div>
 
 <p>Mansfield State High School</p>
 <p>PO Box 229</p>
 <p>Mt Gravatt Q 4122</p>
 <p>Ph    3452 5333</p>
 <p>FAX   3452 5300</p>
-<p>Email   <a href "smaatenquiries@outlook.com">smaatenquiries@outlook.com</a></p>
+<p>Email   <a href "mailto:smaatenquiries@outlook.com?s">smaatenquiries@outlook.com</a></p>
 <p>Website <a href="www.smaat.com.au">www.smaat.com.au</a></p>
 
 <p>SCHOOL LIAISONS</p>
