Changing email view.

--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -16,30 +16,26 @@ Thank you for enrolling in the SMAAT program.
 
 <p>Kind regards</p>
 
-<div>
-	<p>
-		<ul>
-			<li>Nelson Hsieh</li>
-			<li>SMAAT Coordinator</li>
-			<li>Students of Mansfield Alumni Assistance and Tuition</li>
-			<ul>
-	</p>
-</div>
 
-<p>Mansfield State High School</p>
-<p>PO Box 229</p>
-<p>Mt Gravatt Q 4122</p>
-<p>Ph    3452 5333</p>
-<p>FAX   3452 5300</p>
-<p>Email   <a href "mailto:smaatenquiries@outlook.com?s">smaatenquiries@outlook.com</a></p>
-<p>Website <a href="www.smaat.com.au">www.smaat.com.au</a></p>
+<p>Nelson Hsieh<br/>
+   SMAAT Coordinator<br />
+	 Students of Mansfield Alumni Assistance and Tuition
+</p>
 
-<p>SCHOOL LIAISONS</p>
-<p>Ms S Moye</p>
-<p>HOD (Teaching and Learning)</p>
-<p>Email    smoye1@eq.edu.au</p>
+<p>Mansfield State High School<br />
+	 PO Box 229<br />
+	 Mt Gravatt Q 4122<br />
+	 Ph    3452 5333<br />
+	 FAX   3452 5300<br />
+	 Email   <a href "mailto:smaatenquiries@outlook.com?">smaatenquiries@outlook.com</a><br />
+	 Website <a href="www.smaat.com.au">www.smaat.com.au</a></p>
 
-<p>Ms B Clarke</p>
-<p>Deputy Principal</p>
-<p>Email  bclar11@eq.edu.au</p>
+<p>SCHOOL LIAISONS<br />
+	 Ms S Moye<br />
+	 HOD (Teaching and Learning)<br />
+	 Email   <a href "mailto:smoye1@eq.edu.au?">smoye1@eq.edu.au</a></p>
+
+<p>Ms B Clarke<br />
+<p>Deputy Principal<br />
+<p>Email <a href "mailto:bclar11@eq.edu.au?">bclar11@eq.edu.au</a></p>
 
