Changing confirmation email view.

--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -12,7 +12,7 @@ Thank you for enrolling in the SMAAT program.
 
 <p>The tutors look forward to aiding your student any way we can.</p>
 
-<p>Please do not hesitate to consult <a href="www.smaat.com.au">www.smaat.com.au</a> for further information or contact me at <a href "smaatenquiries@outlook.com">smaatenquiries@outlook.com</a> if there are any problems.</p>
+<p>Please do not hesitate to consult <a href="http://www.smaat.com.au">www.smaat.com.au</a> for further information or contact me at <a href "smaatenquiries@outlook.com">smaatenquiries@outlook.com</a> if there are any problems.</p>
 
 <p>Kind regards</p>
 
@@ -36,6 +36,6 @@ Thank you for enrolling in the SMAAT program.
 	 Email   <a href "mailto:smoye1@eq.edu.au?">smoye1@eq.edu.au</a></p>
 
 <p>Ms B Clarke<br />
-<p>Deputy Principal<br />
-<p>Email <a href "mailto:bclar11@eq.edu.au?">bclar11@eq.edu.au</a></p>
+	 Deputy Principal<br />
+   Email <a href "mailto:bclar11@eq.edu.au?">bclar11@eq.edu.au</a></p>
 
