Fixed mail links.

--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -12,7 +12,7 @@ Thank you for enrolling in the SMAAT program.
 
 <p>The tutors look forward to aiding your student any way we can.</p>
 
-<p>Please do not hesitate to consult <a href="http://www.smaat.com.au">www.smaat.com.au</a> for further information or contact me at <a href "mailto:smaatenquiries@outlook.com">smaatenquiries@outlook.com</a> if there are any problems.</p>
+<p>Please do not hesitate to consult <a href="http://www.smaat.com.au">www.smaat.com.au</a> for further information or contact me at <a href="mailto:smaatenquiries@outlook.com">smaatenquiries@outlook.com</a> if there are any problems.</p>
 
 <p>Kind regards</p>
 
@@ -27,15 +27,15 @@ Thank you for enrolling in the SMAAT program.
 	 Mt Gravatt Q 4122<br />
 	 Ph    3452 5333<br />
 	 FAX   3452 5300<br />
-	 Email   <a href "mailto:smaatenquiries@outlook.com">smaatenquiries@outlook.com</a><br />
+	 Email   <a href="mailto:smaatenquiries@outlook.com">smaatenquiries@outlook.com</a><br />
 	 Website <a href="http://www.smaat.com.au">www.smaat.com.au</a></p>
 
 <p>SCHOOL LIAISONS<br />
 	 Ms S Moye<br />
 	 HOD (Teaching and Learning)<br />
-	 Email   <a href "mailto:smoye1@eq.edu.au">smoye1@eq.edu.au</a></p>
+	 Email   <a href="mailto:smoye1@eq.edu.au">smoye1@eq.edu.au</a></p>
 
 <p>Ms B Clarke<br />
 	 Deputy Principal<br />
-   Email <a href "mailto:bclar11@eq.edu.au">bclar11@eq.edu.au</a></p>
+   Email <a href="mailto:bclar11@eq.edu.au">bclar11@eq.edu.au</a></p>
 
