--- a/app/views/sign_up_info_mailer/sign_up_information.html.erb
+++ b/app/views/sign_up_info_mailer/sign_up_information.html.erb
@@ -1,4 +1,4 @@
-<p>Dear parent/guardian %>,</p>
+<p>Dear <%= @user.parent_name %>,</p>
 
 <p>Please find attached 3 forms, one which outlines the enrolled sessions your student will be enrolled for and the second is an agreement that outlines the roles and responsibilities that you will play in your student’s academic success. The third is a payment detail form and all payment is to be made to the lower office. Your sessions will be $20 a session.</p>
 
