--- a/app/views/notification_mailer/notify.html.erb
+++ b/app/views/notification_mailer/notify.html.erb
@@ -11,8 +11,8 @@
 	<tbody>
 		<% @user.subjects.each do |subject| %>
 			  <tr>
-          <th><%= subject.name %></th>
-          <th><%= subject.description %></th>
+          <td><%= subject.name %></th>
+          <td><%= subject.description %></th>
         </tr>
 		<% end %>
 	</tbody><br />
