--- a/app/views/notification_mailer/notify.html.erb
+++ b/app/views/notification_mailer/notify.html.erb
@@ -17,7 +17,7 @@
 		<% end %>
 	</tbody><br />
 	Parent's Name: <%= @user.parent_name %><br />
-	Parent's Email: <%= <a href=@user.email%>@user.email</a>%><br />
+	Parent's Email: <%= @user.email%><br />
 	Parent's Contact Number: <%= @user.contact %><br />
 	Receive reports?: <%= @user.reports %><br />
 </p>
