Added logo. Needs fixing.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <nav>
         <ul class="nav navbar-nav">
-          <!-- li><%= link_to(image_tag("vndr_logo.png",:size => "50x50",:alt=> "logo",:title => "Home"), "/", class: "brand")%></li -->
+          <li><%= link_to(image_tag("smaat_logo.png",:size => "150x150",:alt=> "logo",:title => "Home"), "/", class: "brand")%></li>
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Information", info_path %></li>
           <li><%= link_to "Why SMAAT?", why_smaat_path %></li>
