--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -204,6 +204,14 @@ input {
   text-align:center;
 }
 
+.navbar .brand {
+  float: left;
+  position: absolute;
+  display: block;
+  padding: 10px 20px 10px;
+  margin-left: -20px;
+}
+
 
 
 
