Changed div to span in header.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-default navbar-static-top">
   <div class="navbar-inner">
-    <div class="container">
+    <span class="container">
       <nav>
         <ul class="nav navbar-nav">
           <li><%= link_to(image_tag("smaat_logo.png",:size => "150x150",:alt=> "logo",:title => "Home"), "/", class: "brand")%></li>
@@ -22,6 +22,6 @@
           <%= render 'layouts/registration_items' %>
         </ul>
       </nav>
-    </div>
+    </span>
   </div>
 </header>
