--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="navbar navbar-default navbar-static-top">
-  <li><%= link_to(image_tag("smaat_logo.png",:size => "150x150",:alt=> "logo",:title => "Home"), "/", class: "brand")%></li>
+  <%= link_to(image_tag("smaat_logo.png",:size => "150x150",:alt=> "logo",:title => "Home"), "/", class: "brand")%>
   <div class="navbar-inner">
     <span class="container">
       <nav>
