--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,10 @@
 <header class="navbar navbar-default navbar-static-top">
-  <%= link_to(image_tag("smaat_logo.png",:size => "150x150",:alt=> "logo",:title => "Home"), "/", class: "brand")%>
+  <img alt="logo" height="150" src="/assets/smaat_logo-a063b4f300e2da3bc8305ceda73df712.png" title="Home" width="150" style="
+    position: Absolute;
+    width: 110px;
+    top: -33px;
+    left: 50px;
+">
   <div class="navbar-inner">
     <span class="container">
       <nav>
