Added padding to flash notice.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -137,6 +137,7 @@ input {
     border-color: #eed3d7;
     color: #b94a48;
     text-align: left;
+    padding-top: 30px;
  }
 
 .alert-alert {
@@ -144,6 +145,7 @@ input {
     border-color: #eed3d7;
     color: #b94a48;
     text-align: left;
+    padding-top: 30px;
  }
 
 .alert-success {
@@ -151,6 +153,7 @@ input {
     border-color: #d6e9c6;
     color: #468847;
     text-align: left;
+    padding-top: 30px;
  }
 
 .alert-notice {
@@ -158,6 +161,7 @@ input {
     border-color: #d6e9c6;
     color: #468847;
     text-align: left;
+    padding-top: 30px;
  }
 
 
@@ -210,9 +214,6 @@ input {
   padding-left: 240px;
 }
 
-.navbar {
-  padding-bottom: 30px;
-}
 
 
 
