--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -53,14 +53,15 @@ h1 {
   font-size: 4em;
   letter-spacing: -2px;
   margin-bottom: 30px;
-  text-align: center;
+  text-align: center; 
 }
 
 h2 {
+  font-size: 40px;
+  font-weight: 300;
+  line-height: 1;
   letter-spacing: -1px;
-  margin-bottom: 20px;
   text-align: center;
-  font-weight: bold;
 }
 
 h3 {
@@ -93,11 +94,70 @@ h6 {
 }
 
 p {
+  font-size: 1em;
   display: block;
   -webkit-margin-before: 1em;
   -webkit-margin-after: 1em;
   -webkit-margin-start: 0px;
   -webkit-margin-end: 0px;
+}
+
+.p-info {
+  margin-bottom: 20px;
+  font-size: 2em;
+  font-weight: 200;
+  line-height: 30px;
+  text-align: center;
+}
+
+.p-why {
+  margin-bottom: 20px;
+  font-size: 1.5em;
+  font-weight: 200;
+  line-height: 25px;
+}
+
+div.why ul li {
+  margin-bottom: 10px;
+  font-size: 1.5em;
+  font-weight: 200;
+  line-height: 25px;
+}
+
+.title {
+  font-size: 70px;
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+
+.home-title {
+  font-size: 70px;
+  font-weight: 400;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+
+.heading {
+  font-size: 40px;
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+
+.heading2 {
+  font-size: 30px;
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+
+.divider {
+  margin: 20px 0;
+}
+
+.featurette-divider2 {
+  margin: 40px 0;
 }
 
 /* forms */
