--- a/app/views/layouts/_jumbotron.html.erb
+++ b/app/views/layouts/_jumbotron.html.erb
@@ -1,6 +1,6 @@
 <!-- Jumbotron -->
 <div class="jumbotron">
-  <h6>SMAAT</h6>
+  <h6 class="home-title">SMAAT</h6>
   <h3>Tutoring for <i><b>present</b></i> students by <b><i>past</i></b> students.</h3>
   <p class="lead">SMAAT (Student of Mansfield Alumni Assistance and Tuition) is an assistance and tuition program in which students can seek academic aid as well as insight into completing assessment and exam preparation. We aim to provide affordable, high quality tutors to the students of Mansfield State High School. </p>
   <div class="centered">
