--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<h1 class="title">Sign up</h1>
 <div class="row">
 	<div class="span6 offset3">
 		<%= nested_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
