Changed devise views.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -21,7 +21,7 @@
 <div class="featurette">
   <%= image_tag("have_fun.png", size: "600x600", class: "featurette-image pull-right") %>
   <h2 class="featurette-heading">HAVE FUN!</h2>
-  <p class="lead">The 9 - 3 grind of home, school and homework can become monotonous for many students, SMAAT aims to motivate and encourage students to view learning as an enjoyable experience. Sessions are conducted by driven tutors to create a safe, energetic and interactive environment. Learning something new can be enjoyable and enlightening experience. <b>AT SMAAT LEARNING CAN BE FUN!</b></p>
+  <p class="lead">The 9 - 3 grind of home, school and homework can become monotonous for many students. SMAAT aims to motivate and encourage students to view learning as an enjoyable experience. Sessions are conducted by driven tutors to create a safe, energetic and interactive environment. Learning something new can be enjoyable and enlightening experience. <b>AT SMAAT LEARNING CAN BE FUN!</b></p>
 </div>
 <hr class="featurette-divider2">
 <p>
