--- a/app/views/layouts/_registration_items.html.erb
+++ b/app/views/layouts/_registration_items.html.erb
@@ -13,5 +13,6 @@
   </li>
 <% else %>
   <li><%= link_to "Sign up", new_user_registration_path %></li>
+  <li><%= link_to "Log in", new_user_session_path %></li>
 <% end %>
 
