--- a/app/views/layouts/_registration_items.html.erb
+++ b/app/views/layouts/_registration_items.html.erb
@@ -7,7 +7,7 @@
       <li><%= link_to "Edit Account", edit_user_registration_path %></li>
       <li class="divider"></li>
       <li>
-        <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+        <%= link_to "Log out", destroy_user_session_path, :method => :delete %>
       </li>
     </ul>
   </li>
