--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,11 @@
 <header class="navbar navbar-default navbar-static-top">
-  <img alt="logo" height="150" src="/assets/smaat_logo-a063b4f300e2da3bc8305ceda73df712.png" title="Home" width="150" style="
+  <!--img alt="logo" height="150" src="/assets/smaat_logo-a063b4f300e2da3bc8305ceda73df712.png" title="Home" width="150" style="
     position: Absolute;
     width: 110px;
     top: 33px;
     left: 130px;
-">
+"-->
+  <%= link_to(image_tag("smaat_logo.png",:size => "150x150",:alt=> "logo",:title => "Home") , "/", class: "brand" )%>
   <div class="navbar-inner">
     <span class="container">
       <nav>
@@ -12,6 +13,7 @@
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Information", info_path %></li>
           <li><%= link_to "Why SMAAT?", why_smaat_path %></li>
+          <li><%= link_to "Contact", contact_path %></li>
           <li id="fat-menu" class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Tutors <b class="caret"></b>
