Changed title colour.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,6 +54,7 @@ h1 {
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center; 
+  color: #3669A7;
 }
 
 h2 {
@@ -129,6 +130,7 @@ div.why ul li {
   font-weight: 300;
   line-height: 1;
   letter-spacing: -1px;
+  color: #3669A7;
 }
 
 .home-title {
